master: fixed mistakes